--- a/app/src/main/res/layout/fragment_performance.xml
+++ b/app/src/main/res/layout/fragment_performance.xml
@@ -98,13 +98,10 @@
                 android:elevation="@dimen/space_2"
                 android:padding="8dp">
 
-                <com.github.mikephil.charting.charts.LineChart
-                    android:id="@+id/mChart"
+                <com.jjoe64.graphview.GraphView
+                    android:id="@+id/graph"
                     android:layout_width="match_parent"
-                    android:layout_height="200dp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    android:layout_height="180dip" />
 
 
             </android.support.constraint.ConstraintLayout>
@@ -168,6 +165,7 @@
                 android:background="@drawable/shape_cart_view"
                 android:elevation="@dimen/space_2"
                 android:orientation="vertical"
+                android:visibility="gone"
                 android:padding="8dp">
 
                 <TextView
