--- a/app/src/main/res/layout/fragment_performance.xml
+++ b/app/src/main/res/layout/fragment_performance.xml
@@ -158,36 +158,159 @@
 
             </android.support.constraint.ConstraintLayout>
 
-            <LinearLayout
+            <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginTop="@dimen/default_space"
                 android:background="@drawable/shape_cart_view"
                 android:elevation="@dimen/space_2"
-                android:orientation="vertical"
-                android:visibility="gone"
                 android:padding="8dp">
 
                 <TextView
+                    android:id="@+id/tvCalculateL"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/lato_semibold"
                     android:text="@string/calculate_historical_performance"
                     android:textAppearance="@style/TextAppearance.AppCompat.Small"
                     android:textColor="@android:color/black"
-                    app:layout_constraintStart_toStartOf="parent" />
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:id="@+id/tvInvestL"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/default_space"
+                    android:text="@string/if_you_had_invested"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                    android:textColor="@color/semi_black"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/tvCalculateL" />
+
+
+                <TextView
+                    android:id="@+id/tvOverL"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/default_space"
+                    android:text="@string/over_the_last"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                    android:textColor="@color/semi_black"
+                    app:layout_constraintEnd_toEndOf="@+id/edtYears"
+                    app:layout_constraintStart_toStartOf="@+id/edtYears"
+                    app:layout_constraintTop_toBottomOf="@+id/tvCalculateL" />
+
+                <LinearLayout
+                    android:id="@+id/llContainer"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/space_8"
+                    android:background="@drawable/shape_rounded_gray"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal"
+                    android:padding="@dimen/space_8"
+                    app:layout_constraintEnd_toStartOf="@id/edtYears"
+                    app:layout_constraintHorizontal_weight="1.2"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/tvInvestL">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="@dimen/space_4"
+                        android:layout_marginEnd="@dimen/space_4"
+                        android:text="@string/rs_symbol"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Caption" />
+
+                    <EditText
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@null"
+                        android:hint="1,00,000"
+                        android:inputType="number"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Caption" />
+
+                </LinearLayout>
+
+                <EditText
+                    android:id="@+id/edtYears"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/space_8"
+                    android:layout_marginTop="@dimen/space_8"
+                    android:layout_marginEnd="@dimen/space_8"
+                    android:background="@drawable/shape_rounded_gray"
+                    android:gravity="center"
+                    android:hint="1"
+                    android:inputType="number"
+                    android:padding="@dimen/space_8"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                    app:layout_constraintEnd_toStartOf="@+id/frmDuration"
+                    app:layout_constraintHorizontal_weight="0.6"
+                    app:layout_constraintStart_toEndOf="@+id/llContainer"
+                    app:layout_constraintTop_toBottomOf="@+id/tvInvestL" />
+
+                <FrameLayout
+                    android:id="@+id/frmDuration"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/space_8"
+                    android:layout_marginTop="@dimen/space_8"
+                    android:layout_marginEnd="@dimen/space_8"
+                    android:background="@drawable/shape_rounded_gray"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_weight="1"
+                    app:layout_constraintStart_toEndOf="@id/edtYears"
+                    app:layout_constraintTop_toBottomOf="@+id/tvInvestL">
+
+                    <Spinner
+                        android:id="@+id/spnDuration"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@null"
+                        android:prompt="@string/duration"
+                        android:spinnerMode="dialog" />
+
+                </FrameLayout>
+
+                <TextView
+                    android:id="@+id/tvYouEarn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/default_space"
+                    android:fontFamily="@font/lato_semibold"
+                    android:text="@string/you_would_have_earned"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                    android:textColor="@android:color/black"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/llContainer" />
 
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/rvEarned"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/space_8"
+                    android:layout_marginTop="@dimen/default_space"
                     android:scrollbars="none"
                     app:layoutManager="android.support.v7.widget.LinearLayoutManager"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/tvYouEarn"
                     tools:itemCount="2"
                     tools:listitem="@layout/row_top_ten_holdings_list_item" />
 
-            </LinearLayout>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/default_space"
+                    android:layout_marginBottom="@dimen/space_8"
+                    android:text="@string/disclaimer_expected_returns"
+                    android:textColor="@android:color/holo_red_dark"
+                    android:textSize="@dimen/sp9"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/rvEarned" />
+
+            </android.support.constraint.ConstraintLayout>
 
             <Button
                 android:id="@+id/btnIdle"
