--- a/app/src/main/res/layout/fragment_overview.xml
+++ b/app/src/main/res/layout/fragment_overview.xml
@@ -438,16 +438,17 @@
                 android:layout_marginTop="@dimen/space_16"
                 android:layout_marginEnd="@dimen/default_space"
                 android:text="@string/tap_here_to_see_the_fund_offer_document"
+                android:layout_marginBottom="@dimen/default_space"
                 android:textAppearance="@style/TextAppearance.AppCompat.Small"
                 android:textColor="@color/item_selected_color"
                 app:layout_constraintStart_toStartOf="parent" />
 
             <Button
+                android:visibility="@{vm.isRegularFund?View.GONE:View.VISIBLE}"
                 android:id="@+id/btn_invest_now"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/default_space"
-                android:layout_marginTop="@dimen/default_space"
                 android:layout_marginEnd="@dimen/default_space"
                 android:layout_marginBottom="@dimen/default_space"
                 android:background="@drawable/shape_btn_idle_bg"
